# pychronos

./: README.md  pyproject.toml
src/pychronos/: __main__.py  constants.py  sound.py  timer.py  ui.py
src/pychronos/resources/: chronos.icns
tests/: test_sound.py  test_timer.py  test_ui.py
